--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <p>Git + GitHub</p>
+    <h2>Hello</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod possimus veritatis commodi. Nihil rem incidunt ex veritatis minima. Quibusdam, suscipit!</p>
 </body>
 </html>
